--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ a:hover {
 	text-decoration: none
 }
 
-.text-black {
+/* .text-black {
 	color: #000!important
-}
+} */
 
 .bg-black {
 	background: #000!important
