--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,8 @@ a:hover {
 	}
 }
 
+
+
 .site-section.site-section-sm {
 	padding: 4em 0
 }
@@ -1730,28 +1732,28 @@ a:hover {
 #lightgallery .item img {
 	max-width: 100%;
 	object-fit:cover;
-	filter: gray;
+	/* filter: gray;
 	-webkit-filter: grayscale(1);
-	-webkit-transition: all .1s ease-in-out
+	-webkit-transition: all .1s ease-in-out */
 }
 
-#lightgallery .item:hover img {
+/* #lightgallery .item:hover img {
 	filter: none;
 	-webkit-filter: grayscale(0);
 	-webkit-transform: scale(1.01)
-}
+} */
 
-.site-section #lightgallery img {
+/* .site-section #lightgallery img {
 	filter: gray;
 	-webkit-filter: grayscale(1);
 	-webkit-transition: all .1s ease-in-out
-}
+} */
 
-.site-section #lightgallery img:hover {
+/* .site-section #lightgallery img:hover {
 	filter: none;
 	-webkit-filter: grayscale(0);
 	-webkit-transform: scale(1.01)
-}
+} */
 
 
 .food-item img{
@@ -1762,9 +1764,8 @@ a:hover {
 }
 
 .food-item img:hover{
-	height: 25%;
-	width: 25%;
-	transition: .2s all ease-in-out;
+	transition: all .2s ease-in-out;
+	transform: scale(1.3)
 }
 
 .flaticon-eiffel-tower{
